--- a/css/no-js.css
+++ b/css/no-js.css
@@ -1,1 +1,2 @@
 body {font-family: ui-sans-serif, -apple-system, "Segoe UI", Roboto, Inter, Arial, sans-serif; margin:1rem;}
+.toggle{display:none;}
