--- a/css/no-js.css
+++ b/css/no-js.css
@@ -1,2 +1,3 @@
 body {font-family: ui-sans-serif, -apple-system, "Segoe UI", Roboto, Inter, Arial, sans-serif; margin:1rem;}
 .toggle{display:none;}
+.impact{display:block !important;}
